--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "start": "webpack serve --mode development"
   },
   "repository": {
     "type": "git",
@@ -24,16 +25,24 @@
   "homepage": "https://github.com/asenka0301/frontend-bootcamp-project-11#readme",
   "devDependencies": {
     "@webpack-cli/generators": "^3.0.1",
+    "autoprefixer": "^10.4.13",
+    "css-loader": "^6.7.3",
     "eslint": "^8.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "html-webpack-plugin": "^5.5.0",
+    "postcss-loader": "^7.0.2",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
     "workbox-webpack-plugin": "^6.5.4"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
     "lodash": "^4.17.21"
   }
 }
