fix linter remarks

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,11 +8,4 @@ parserOptions:
   sourceType: module
 rules:
   no-console: 0
-  import/extensions: 
-    - error
-    - ignorePackages
-    - js: always
-    - devDependencies: false
-    - optionalDependencies: false
-    - peerDependencies: false
-    
+  import/no-extraneous-dependencies: 0
