--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "my-webpack-project",
+  "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "My webpack project",
+  "description": "RSS aggregator progect",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=production --node-env=production",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch",
-    "serve": "webpack serve",
-    "start": "webpack serve --mode development"
+    "develop": "npx webpack serve",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
