--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "axios": "^1.2.6",
     "bootstrap": "^5.2.3",
     "i18next": "^22.4.9",
     "lodash": "^4.17.21",
